--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@
 	</svg>
 
 	<header class="header">
-		<div class="s-header__container ">
+		<div class="s-header__container npm">
 			<div class="menu s-menu">
 
 				<div class="s-header__block container">
@@ -135,7 +135,7 @@
 
 
 				<nav class="nav s-nav">
-					<div class="nav__inner s-nav__inner">
+					<div class="nav__inner s-nav__inner container">
 						<ul class="nav__list s-nav__list">
 							<li class="nav__item">
 								<a href="services.html" class="link-hover">Послуги</a>
@@ -158,6 +158,9 @@
 			</div>
 		</div>
 	</header>
+
+	<main>
+	</main>
 
 	<script src="js/index.js"></script>
 </body>
