--- a/services.html
+++ b/services.html
@@ -74,71 +74,61 @@
 		</symbol>
 	</svg>
 
-	<header class="header">
-		<div class="s-header__container npm">
-			<div class="menu s-menu">
 
-				<div class="s-header__block container">
-					<button class="burger-btn" href="#"><span></span></button>
+	<header class="s-header">
 
-					<ul class="s-header__list-lang">
-						<li class="s-header__item-lang active"><button class="button-lang" disabled>Українська</button></li>
-						<li class="s-header__item-lang"><button class="button-lang">English</button></li>
-					</ul>
-				</div>
+		<div class="nav__social--desktop-wrap">
+			<div class="nav__social--desktop container">
+				<ul class="nav__social-list--desktop">
+					<li class="nav__social-item">
+						<a class="link-social" href="tel:+380687945051">
+							<svg class="link-social--svg" width="30" height="20">
+								<use xlink:href="#phone"></use>
+							</svg>
+							+38 (096) 123 91 21
+						</a>
+					</li>
+					<li class="nav__social-item">
+						<a href="mailto:lazerarmax@gmail.com" class="link-social">
+							<svg class="link-social--svg" width="30" height="20">
+								<use xlink:href="#mail"></use>
+							</svg>
+							lazer.armax@gmail.com
+						</a>
+					</li>
+				</ul>
+				<ul class="nav__social-list--desktop nav__social-list--svg">
+					<li class="nav__social-item">
+						<a href="https://www.facebook.com/armaxMG" class="link-social">
+							<svg class="link-social--svg" width="25" height="25">
+								<use xlink:href="#facebook"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="nav__social-item">
+						<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
+							class="link-social">
+							<svg class="link-social--svg" width="25" height="25">
+								<use xlink:href="#location"></use>
+							</svg>
+						</a>
+					</li>
+				</ul>
+			</div>
 
-				<div class="s-header__block container">
+		</div>
 
-					<h1 class="s-menu__title">
-						<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt=""
-								width="120"></a>
-					</h1>
-					<ul class="s-header__list-social">
-						<li class="s-header__item-social">
-							<a class="s-link-social" href="tel:+380687945051">
-								<svg class="s-link-social--svg" width="30" height="25">
-									<use xlink:href="#phone"></use>
-								</svg>
-								<span class="s-tablet">+380687945051</span>
-							</a>
-						</li>
-						<li class="s-header__item-social">
-							<a href="mailto:lazerarmax@gmail.com" class="s-link-social">
-								<svg class="s-link-social--svg" width="30" height="25">
-									<use xlink:href="#mail"></use>
-								</svg>
-								<span class="s-tablet">lazer.armax@gmail.com</span>
-							</a>
-						</li>
-						<li class="s-header__item-social">
-							<a href="https://www.facebook.com/armaxMG" class="s-link-social">
-								<svg class="s-link-social--svg" width="30" height="25">
-									<use xlink:href="#facebook"></use>
-								</svg>
-								<span class="s-tablet">facebook.com/armaxMG</span>
-							</a>
-						</li>
-						<li class="s-header__item-social">
-							<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
-								class="s-link-social">
-								<svg class="s-link-social--svg" width="30" height="35">
-									<use xlink:href="#location"></use>
-								</svg>
-								<span class="s-tablet">вулиця Грушевського, 26, Ківерці</span>
-							</a>
-						</li>
-					</ul>
-
-
-
-				</div>
-
-
-				<nav class="nav s-nav">
-					<div class="nav__inner s-nav__inner container">
-						<ul class="nav__list s-nav__list">
+		<div class="s-header__container container">
+			<div class=" s-menu">
+				<button class="burger-btn"><span></span></button>
+				<h1 class="menu__title">
+					<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt=""></a>
+				</h1>
+				<nav class="nav">
+					<div class="nav__inner">
+						<ul class="nav__list">
 							<li class="nav__item">
-								<a href="services.html" class="link-hover">Послуги</a>
+								<a href="services.html" class="link-hover active">Послуги</a>
 							</li>
 							<li class="nav__item">
 								<a href="about-us.html" class="link-hover">Про нас</a>
@@ -151,16 +141,344 @@
 							</li>
 						</ul>
 
-
+						<ul class="nav__list nav__list-social">
+							<li class="nav__item-social">
+								<a class="link-social" href="tel:+380687945051">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#phone"></use>
+									</svg>
+									+38 (099) 132 45 67
+								</a>
+							</li>
+							<li class="nav__item-social">
+								<a href="mailto:lazerarmax@gmail.com" class="link-social">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#mail"></use>
+									</svg>
+									lazer.armax@gmail.com
+								</a>
+							</li>
+							<li class="nav__item-social">
+								<a href="https://www.facebook.com/armaxMG" class="link-social">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#facebook"></use>
+									</svg>
+									<span class="none">facebook.com/armaxMG/</span>
+								</a>
+							</li>
+							<li class="nav__item-social">
+								<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
+									class="link-social">
+									<svg class="link-social--svg" width="30" height="30">
+										<use xlink:href="#location"></use>
+									</svg>
+									<span class="none">45200 м. Ківерці, вул.Грушевського 26</span>
+								</a>
+							</li>
+						</ul>
 					</div>
 
 				</nav>
 			</div>
+
+
+
 		</div>
 	</header>
+	<main class="main">
+		<section class="section services">
+			<h3 class="section__title services__title">Наші послуги</h3>
+			<div class="services__container">
+				<article class="services__card" data-aos="fade-up">
+					<figure class="services__content">
+						<picture>
+							<img class="services__img" src="img/lazer.jpg" alt="1" width="300" height="200">
 
-	<main>
+						</picture>
+						<figcaption class="services__figcaption">
+							<div class="services__name">
+								<a class="services__name-link" href="lazer.html">
+									Лазерна порізка
+								</a>
+							</div>
+							<div class="services__hover-content">
+								<h4 class="services__hover-title">Лазер дозволяє виконувати як легкі, так і складні деталі, гарантуючи
+									високу точність і відмінну швидкість роботи.</h4>
+								<a class="services__hover-text" href="lazer.html">
+									<span class="services__hover--circle">Детальніше</span>
+								</a>
+								<a class="services__link" href="lazer.html"></a>
+							</div>
+
+						</figcaption>
+					</figure>
+				</article>
+				<article class="services__card" data-aos="fade-up">
+					<figure class="services__content">
+						<picture>
+							<img class="services__img" src="img/sheet-bending.jpg" alt="sheet-bending" width="300" height="200">
+
+						</picture>
+						<figcaption class="services__figcaption">
+							<div class="services__name">
+								<a class="services__name-link" href="lazer.html">
+									Гнуття деталей
+								</a>
+							</div>
+							<div class="services__hover-content">
+								<h4 class="services__hover-title">Гнуття металу - э однією з основних сфер застосування листового
+									металу є виготовлення виробів із зігнутих листових деталей.</h4>
+								<a class="services__hover-text" href="lazer.html">
+									<span class="services__hover--circle">Детальніше</span>
+								</a>
+								<a class="services__link" href="lazer.html"></a>
+							</div>
+
+						</figcaption>
+					</figure>
+				</article>
+				<article class="services__card" data-aos="fade-up">
+					<figure class="services__content">
+						<picture>
+							<img class="services__img" src="img/powder-painting.jpg" alt="lazer" width="300" height="200">
+
+						</picture>
+						<figcaption class="services__figcaption">
+							<div class="services__name">
+								<a class="services__name-link" href="lazer.html">
+									Порошкове фарбування
+								</a>
+							</div>
+							<div class="services__hover-content">
+								<h4 class="services__hover-title">Порошкове фарбування металевих виробів забезпечує високу якість
+									покриття., зберігає відмінні фізико-хімічні та оздоблювальні характеристики.</h4>
+								<a class="services__hover-text" href="lazer.html">
+									<span class="services__hover--circle">Детальніше</span>
+								</a>
+								<a class="services__link" href="lazer.html"></a>
+							</div>
+
+						</figcaption>
+					</figure>
+				</article>
+				<article class="services__card" data-aos="fade-up">
+					<figure class="services__content">
+						<picture>
+							<img class="services__img" src="img/metal-products.jpg" alt="lazer" width="300" height="200">
+
+						</picture>
+						<figcaption class="services__figcaption">
+							<div class="services__name">
+								<a class="services__name-link" href="lazer.html">
+									Зварювання деталей
+								</a>
+							</div>
+							<div class="services__hover-content">
+								<h4 class="services__hover-title">
+									Виконуємо зварювання деталей
+								</h4>
+								<a class="services__hover-text" href="lazer.html">
+									<span class="services__hover--circle">Детальніше</span>
+								</a>
+								<a class="services__link" href="lazer.html"></a>
+							</div>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="services__card" data-aos="fade-up">
+					<figure class="services__content">
+						<picture>
+							<img class="services__img" src="img/drilling-holes.jpg" alt="lazer" width="300" height="200">
+
+						</picture>
+						<figcaption class="services__figcaption">
+							<div class="services__name">
+								<a class="services__name-link" href="lazer.html">
+									Свердління отворі
+								</a>
+							</div>
+							<div class="services__hover-content">
+								<h4 class="services__hover-title">
+									Свердління отворів
+								</h4>
+								<a class="services__hover-text" href="lazer.html">
+									<span class="services__hover--circle">Детальніше</span>
+								</a>
+								<a class="services__link" href="lazer.html"></a>
+							</div>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="services__card" data-aos="fade-up">
+					<figure class="services__content">
+						<picture>
+							<img class="services__img" src="img/dev-draw.jpg" alt="lazer" width="300" height="200">
+
+						</picture>
+						<figcaption class="services__figcaption">
+							<div class="services__name">
+								<a class="services__name-link" href="lazer.html">
+									Розробка креслень
+								</a>
+							</div>
+							<div class="services__hover-content">
+								<h4 class="services__hover-title">
+									Розробка креслень
+								</h4>
+								<a class="services__hover-text" href="lazer.html">
+									<span class="services__hover--circle">Детальніше</span>
+								</a>
+								<a class="services__link" href="lazer.html"></a>
+							</div>
+						</figcaption>
+					</figure>
+				</article>
+			</div>
+		</section>
+
+		<section class="calculation">
+			<div class="calculation__inner ">
+				<div class="calculation__wrapper container">
+					<div class="calculation__content">
+						<h3 class="section__title calculation__title">Замовити прорахунок проекту</h3>
+						<ul class="calculation__list">
+							<li class="calculation__item">
+								<p class="calculation__text">
+									Для швидкого прорахунку вартості замовлення, завантажте креслення готових
+									деталей та їх плоскої розгортки у форматі DWG або DXF за допомогою форми або надішліть їх на пошту
+									lazer.armax@gmail.com
+								</p>
+							</li>
+							<li class="calculation__item">
+								<p class="calculation__text">
+									Разом із кресленнями вкажіть номер деталей на Вашому виробництві, тип матеріалу, його марку, товщину
+									матеріалу, і кількість деталей кожного типу.
+								</p>
+							</li>
+							<li class="calculation__item">
+								<p class="calculation__text">
+									У назві файлу не використовуйте спеціальні символи (лапки, дужки, тире), та символи кирилицею.
+								</p>
+							</li>
+							<li class="calculation__item">
+								<p class="calculation__text">
+									Креслення повинні бути виконані прямими, дугами і полілініями. Не
+									допускається використання сплайнів. Вкажіть Ваші контакти (електронна пошта, телефон), щоб ми могли з
+									вами зв'язатися.
+								</p>
+							</li>
+						</ul>
+					</div>
+					<div class="calculation__form-container">
+						<form class="calculation__form" method="post">
+							<input type="text" placeholder="Ім'я">
+							<input type="tel" placeholder="Телефон">
+							<input type="email" placeholder="Електронна пошта">
+							<textarea class="form-textarea" cols="40" rows="6" placeholder="Коментар до замовлення"></textarea>
+							<label class="calculation__label" for="file">Завантажити файл:</label>
+							<input class="calculation__input-file" type="file" id="file">
+
+							<button class="header__content-button button__disabled" type="submit" disabled>Надіслати</button>
+						</form>
+					</div>
+
+				</div>
+			</div>
+		</section>
 	</main>
 
+	<footer class="footer">
+		<div class="footer__wrapper">
+		</div>
+		<div class="footer__bootom">
+			<div class="container">
+				<div class="info">
+					<div class="info__block info__menu">
+						<h5 class="info__title">Меню</h5>
+						<ul>
+							<li class="info__item"><a class="info__link" href="services.html">Послуги</a></li>
+							<li class="info__item"><a class="info__link" href="about-us.html">Про нас</a></li>
+							<li class="info__item"><a class="info__link" href="contacts.html">Контакти</a></li>
+							<li class="info__item"><a class="info__link" href="calc.html">Калькуоятор металу</a></li>
+						</ul>
+					</div>
+					<div class="info__block info__schedule">
+						<h5 class="info__title">Послуги</h5>
+						<ul class="info__list">
+							<li class="info__item"><a href="lazer.html" class="info__link">Лазерна порізка</a></li>
+							<li class="info__item"><a href="lazer.html" class="info__link">Гнуття деталей</a></li>
+							<li class="info__item"><a href="lazer.html" class="info__link">Гнуття труб</a></li>
+							<li class="info__item"><a href="lazer.html" class="info__link">Порошкове фарбування</a></li>
+							<li class="info__item"><a href="lazer.html" class="info__link">Зварювальні роботи</a></li>
+
+						</ul>
+					</div>
+					<div class="info__block info__address">
+						<h5 class="info__title">Адреса</h5>
+						<ul class="info__list">
+							<li class="info__item">
+								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
+									class="link-social">
+									<svg class="link-social--svg" width="30" height="30">
+										<use xlink:href="#location"></use>
+									</svg>
+									45200 м. Ківерці, вул.Грушевського 26
+								</a>
+							</li>
+							<li class="info__item info__item--color">
+								<svg class="clock-svg" width="25" height="25">
+									<use xlink:href="#clock"></use>
+								</svg>
+								Пн - Пт 8:00 - 17:00
+							</li>
+						</ul>
+					</div>
+
+					<div class="info__block info__contact">
+						<h5 class="info__title">Наші контакти</h5>
+						<ul class="info__list">
+							<li class="info__item">
+								<a class="link-social" href="tel:+380687945051">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#phone"></use>
+									</svg>
+									+38 (096) 123 91 21
+								</a>
+							</li>
+							<li class="info__item">
+								<a class="link-social" href="tel:+380687945051">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#phone"></use>
+									</svg>
+									+38 (099) 225 50 51
+								</a>
+							</li>
+							<li class="info__item">
+								<a href="mailto:lazerarmax@gmail.com" class="link-social">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#mail"></use>
+									</svg>
+									lazer.armax@gmail.com
+								</a>
+							</li>
+							<li class="info__item">
+								<a href="https://www.facebook.com/armaxMG" class="link-social">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#facebook"></use>
+									</svg>
+									facebook.com/armaxMG/
+								</a>
+							</li>
+						</ul>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="js/index.js"></script>
+	<script src="js/swiper.js"></script>
 </body>
