--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="nav__inner">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="services.html" class="link-hover">Послуги</a>
+                <a href="services.html" class="link-hover">Металообробка</a>
               </li>
               <li class="nav__item">
                 <a href="about-us.html" class="link-hover">Про нас</a>
@@ -194,7 +194,7 @@
           <form class="header__form" action="">
             <input class="input-name" type="text" placeholder="Ім'я" />
             <input class="input-number" type="tel" placeholder="Телефон" />
-            <button class="button__disabled header__content-button" type="submit" disabled>
+            <button class="button" type="submit">
               Надіслати
             </button>
           </form>
