--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8" />
@@ -74,7 +74,9 @@
 		</symbol>
 	</svg>
 
-	<header class="s-header">
+	<header class="header ">
+		<div class="u-header__background">
+		</div>
 		<div class="nav__social--desktop-wrap">
 			<div class="nav__social--desktop container">
 				<ul class="nav__social-list--desktop">
@@ -115,97 +117,104 @@
 			</div>
 		</div>
 
-		<div class="s-header__nav">
-			<div class="s-header__container container">
-				<div class="s-menu">
-					<button class="burger-btn"><span></span></button>
-					<h1 class="menu__title">
-						<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
+		<div class="header__container container">
+			<div class="menu">
+				<button class="burger-btn"><span></span></button>
+				<h1 class="menu__title">
+					<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
+				</h1>
+				<nav class="nav">
+					<div class="nav__inner">
+						<ul class="nav__list">
+							<li class="nav__item">
+								<a href="services.html" class="link-hover">Послуги</a>
+							</li>
+							<li class="nav__item">
+								<a href="about-us.html" class="link-hover">Про нас</a>
+							</li>
+							<li class="nav__item">
+								<a href="contacts.html" class="link-hover">Контакти</a>
+							</li>
+							<li class="nav__item">
+								<a href="calc.html" class="link-hover">Калькулятор металу</a>
+							</li>
+						</ul>
+
+						<ul class="nav__list nav__list-social">
+							<li class="nav__item-social">
+								<a class="link-social" href="tel:+380687945051">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#phone"></use>
+									</svg>
+									+38 (099) 132 45 67
+								</a>
+							</li>
+							<li class="nav__item-social">
+								<a href="mailto:lazerarmax@gmail.com" class="link-social">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#mail"></use>
+									</svg>
+									lazer.armax@gmail.com
+								</a>
+							</li>
+							<li class="nav__item-social">
+								<a href="https://www.facebook.com/armaxMG" class="link-social">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#facebook"></use>
+									</svg>
+									<span class="none">facebook.com/armaxMG/</span>
+								</a>
+							</li>
+							<li class="nav__item-social">
+								<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
+									class="link-social">
+									<svg class="link-social--svg" width="30" height="30">
+										<use xlink:href="#location"></use>
+									</svg>
+									<span class="none">45200 м. Ківерці, вул.Грушевського 26</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+
+			<div class="header__content--container">
+				<div class="header__content header__inner">
+					<h1 class="header__content-title">
+						Металообробка будь-якої складності на замовлення.
 					</h1>
-					<nav class="nav">
-						<div class="nav__inner">
-							<ul class="nav__list">
-								<li class="nav__item">
-									<a href="about-us.html" class="link-hover">Послуги</a>
-								</li>
+					<p class="header__content-text">
+						Сучасні технології обробки металів. Виготовлення виробів з металу
+						будь-якої складності. Європейська якість
+					</p>
+				</div>
+				<div class="header__form-container header__inner">
+					<h3 class="header__form-title">Надіслати запит :</h3>
 
-								<li class="nav__item active">
-									Про нас
-								</li>
-								<li class="nav__item">
-									<a href="contacts.html" class="link-hover">Контакти</a>
-								</li>
-								<li class="nav__item">
-									<a href="calc.html" class="link-hover">Калькулятор металу</a>
-								</li>
-							</ul>
-
-							<ul class="nav__list nav__list-social">
-								<li class="nav__item-social">
-									<a class="link-social" href="tel:+380687945051">
-										<svg class="link-social--svg" width="30" height="20">
-											<use xlink:href="#phone"></use>
-										</svg>
-										+38 (099) 132 45 67
-									</a>
-								</li>
-								<li class="nav__item-social">
-									<a href="mailto:lazerarmax@gmail.com" class="link-social">
-										<svg class="link-social--svg" width="30" height="20">
-											<use xlink:href="#mail"></use>
-										</svg>
-										lazer.armax@gmail.com
-									</a>
-								</li>
-								<li class="nav__item-social">
-									<a href="https://www.facebook.com/armaxMG" class="link-social">
-										<svg class="link-social--svg" width="30" height="20">
-											<use xlink:href="#facebook"></use>
-										</svg>
-										<span class="none">facebook.com/armaxMG/</span>
-									</a>
-								</li>
-								<li class="nav__item-social">
-									<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
-										class="link-social">
-										<svg class="link-social--svg" width="30" height="30">
-											<use xlink:href="#location"></use>
-										</svg>
-										<span class="none">45200 м. Ківерці, вул.Грушевського 26</span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</nav>
+					<form class="header__form" action="">
+						<input class="input-name" type="text" placeholder="Ім'я" />
+						<input class="input-number" type="tel" placeholder="Телефон" />
+						<button class="button__disabled header__content-button" type="submit" disabled>
+							Надіслати
+						</button>
+					</form>
 				</div>
 			</div>
 		</div>
 	</header>
-	<main class="main">
-		<section class="section services s-services">
-			<div class="container">
-				<h3 class="section__title services__title">Про нашу компанію</h3>
-				<p class="section__text">Виготовлення
-					ТзОВ «АРМАКС МГ» розробляє та виготовляє нестандартне обладнання за двома напрямками:
-					1. Замовник надає конструкторську документацію і технічні вимоги до обладнання. Фахівцями нашої компанії
-					проводиться оцінка вартості робіт і термінів виконання замовлення. Наші фахівці можуть запропонувати
-					удосконалення конструкції устаткування. З огляду на те, що якість продукції, яка випускається, для нас є
-					пріоритетом, а наші співробітники мають значний досвід проектування обладнання, їх поради і зауваження
-					завжди
-					будуть корисні замовнику.
-					2. За відсутності у замовника конструкторської документації та конкретного технічного завдання, фахівці
-					нашої
-					компанії розроблять необхідну документацію для виготовлення нестандартного обладнання під вирішення
-					конкретних
-					завдань.
-					Розроблене нашим КБ нестандартне обладнання буде відповідати усім вимогам, які пред'явлені замовником,
-					наприклад: інтенсивність використання, агресивне середовище, кліматичні умови, продуктивність та ін.</p>
-			</div>
-		</section>
-	</main>
 
+	<main class="main">
+	</main>
 	<footer class="footer">
-		<div class="footer__wrapper"></div>
+		<div class="footer__wrapper">
+			<div class="map">
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1259.9652061668253!2d25.452380342753024!3d50.83245286357741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47259392610572b9%3A0x3edf65d8017ef30a!2z0KLQt9Ce0JIsINCQ0YDQvNCw0LrRgSDQnNCT!5e0!3m2!1suk!2sua!4v1673270441518!5m2!1suk!2sua"
+					width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
+		</div>
 		<div class="footer__bootom">
 			<div class="container">
 				<div class="info">
@@ -252,7 +261,7 @@
 							<li class="info__item">
 								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
 									class="link-social link--hover">
-									<svg class="link-social--svg" width="30" height="30">
+									<svg class="link-social--svg " width="30" height="30">
 										<use xlink:href="#location"></use>
 									</svg>
 									45200 м. Ківерці, вул.Грушевського 26
