--- a/services.html
+++ b/services.html
@@ -73,8 +73,9 @@
 			</g>
 		</symbol>
 	</svg>
-
-	<header class="s-header">
+	<header class="header s-header">
+		<div class="s-header__background">
+		</div>
 		<div class="nav__social--desktop-wrap">
 			<div class="nav__social--desktop container">
 				<ul class="nav__social-list--desktop">
@@ -115,65 +116,89 @@
 			</div>
 		</div>
 
-		<div class="s-header__nav">
-			<div class="s-header__container container">
-				<div class="s-menu">
-					<button class="burger-btn"><span></span></button>
-					<h1 class="menu__title">
-						<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
-					</h1>
-					<nav class="nav">
-						<div class="nav__inner">
-							<ul class="nav__list">
-								<li class="nav__item active">Послуги</li>
-								<li class="nav__item">
-									<a href="about-us.html" class="link-hover">Про нас</a>
-								</li>
-								<li class="nav__item">
-									<a href="contacts.html" class="link-hover">Контакти</a>
-								</li>
-								<li class="nav__item">
-									<a href="calc.html" class="link-hover">Калькулятор металу</a>
-								</li>
-							</ul>
+		<div class="header__container container">
+			<div class="menu">
+				<button class="burger-btn"><span></span></button>
+				<h1 class="menu__title">
+					<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
+				</h1>
+				<nav class="nav">
+					<div class="nav__inner">
+						<ul class="nav__list">
+							<li class="nav__item link--active">
+								Металообробка
+							</li>
+							<li class="nav__item">
+								<a href="about-us.html" class="link-hover">Про нас</a>
+							</li>
+							<li class="nav__item">
+								<a href="contacts.html" class="link-hover">Контакти</a>
+							</li>
+							<li class="nav__item">
+								<a href="calc.html" class="link-hover">Калькулятор металу</a>
+							</li>
+						</ul>
 
-							<ul class="nav__list nav__list-social">
-								<li class="nav__item-social">
-									<a class="link-social" href="tel:+380687945051">
-										<svg class="link-social--svg" width="30" height="20">
-											<use xlink:href="#phone"></use>
-										</svg>
-										+38 (099) 132 45 67
-									</a>
-								</li>
-								<li class="nav__item-social">
-									<a href="mailto:lazerarmax@gmail.com" class="link-social">
-										<svg class="link-social--svg" width="30" height="20">
-											<use xlink:href="#mail"></use>
-										</svg>
-										lazer.armax@gmail.com
-									</a>
-								</li>
-								<li class="nav__item-social">
-									<a href="https://www.facebook.com/armaxMG" class="link-social">
-										<svg class="link-social--svg" width="30" height="20">
-											<use xlink:href="#facebook"></use>
-										</svg>
-										<span class="none">facebook.com/armaxMG/</span>
-									</a>
-								</li>
-								<li class="nav__item-social">
-									<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
-										class="link-social">
-										<svg class="link-social--svg" width="30" height="30">
-											<use xlink:href="#location"></use>
-										</svg>
-										<span class="none">45200 м. Ківерці, вул.Грушевського 26</span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</nav>
+						<ul class="nav__list nav__list-social">
+							<li class="nav__item-social">
+								<a class="link-social" href="tel:+380687945051">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#phone"></use>
+									</svg>
+									+38 (099) 132 45 67
+								</a>
+							</li>
+							<li class="nav__item-social">
+								<a href="mailto:lazerarmax@gmail.com" class="link-social">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#mail"></use>
+									</svg>
+									lazer.armax@gmail.com
+								</a>
+							</li>
+							<li class="nav__item-social">
+								<a href="https://www.facebook.com/armaxMG" class="link-social">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#facebook"></use>
+									</svg>
+									<span class="none">facebook.com/armaxMG/</span>
+								</a>
+							</li>
+							<li class="nav__item-social">
+								<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
+									class="link-social">
+									<svg class="link-social--svg" width="30" height="30">
+										<use xlink:href="#location"></use>
+									</svg>
+									<span class="none">45200 м. Ківерці, вул.Грушевського 26</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+
+			<div class="header__content--container">
+				<div class="header__content header__inner">
+					<h1 class="header__content-title">
+						ArmaxMG надає комплексні послуги з металообробки
+					</h1>
+					<p class="header__content-text">
+						Металообробка — це процес зміни форми необробленого металу з допомогою інструментів і
+						технологій, у результаті
+						якого ми отримаємо готову металеву деталь чи заготівку залежно від потреби.
+					</p>
+				</div>
+				<div class="header__form-container header__inner">
+					<h3 class="header__form-title">Надіслати запит :</h3>
+
+					<form class="header__form" action="">
+						<input class="input-name" type="text" placeholder="Ім'я" />
+						<input class="input-number" type="tel" placeholder="Телефон" />
+						<button class="button header__content-button" type="submit">
+							Надіслати
+						</button>
+					</form>
 				</div>
 			</div>
 		</div>
@@ -181,7 +206,10 @@
 
 	<main class="main">
 		<section class="section services s-services">
-			<h3 class="section__title services__title">Наші послуги</h3>
+			<div class="container">
+				<h3 class="section__title services__title">Наші послуги по металообробці</h3>
+			</div>
+
 			<div class="services__container">
 				<article class="services__card" data-aos="fade-up">
 					<figure class="services__content">
@@ -270,7 +298,9 @@
 							</div>
 							<div class="services__hover-content">
 								<h4 class="services__hover-title">
-									Виконуємо зварювання деталей
+									Зварювання металу — це процес сплавлення двох металевих частин разом, із застосуванням тепла та тиску
+									для утворення міцного зв’язку металу. Тепло генерується електричною дугою або полум’ям, а тиск
+									прикладається за допомогою зварювального інструменту.
 								</h4>
 								<a class="services__hover-text" href="lazer.html">
 									<span class="services__hover--circle">Детальніше</span>
@@ -283,16 +313,17 @@
 				<article class="services__card" data-aos="fade-up">
 					<figure class="services__content">
 						<picture>
-							<img class="services__img" src="img/drilling-holes.jpg" alt="lazer" width="300" height="200" />
+							<img class="services__img" src="img/locksmith.jpg" alt="lazer" width="300" height="200" />
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
 								<a class="services__name-link" href="lazer.html">
-									Свердління отворі
+									Слюсарні роботи
 								</a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">Свердління отворів</h4>
+								<h4 class="services__hover-title">Слюсарні роботи — це процес обробки металів, який зазвичай доповнює
+									інші види металообробки і доводить виріб до готового стану.</h4>
 								<a class="services__hover-text" href="lazer.html">
 									<span class="services__hover--circle">Детальніше</span>
 								</a>
@@ -309,11 +340,11 @@
 						<figcaption class="services__figcaption">
 							<div class="services__name">
 								<a class="services__name-link" href="lazer.html">
-									Розробка креслень
+									Розробка технічної документації
 								</a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">Розробка креслень</h4>
+								<h4 class="services__hover-title">Розробка технічної документації</h4>
 								<a class="services__hover-text" href="lazer.html">
 									<span class="services__hover--circle">Детальніше</span>
 								</a>
