--- a/services.html
+++ b/services.html
@@ -125,8 +125,10 @@
 				<nav class="nav">
 					<div class="nav__inner">
 						<ul class="nav__list">
-							<li class="nav__item link--active">
-								Металообробка
+							<li class="nav__item ">
+								<a class="link--active">
+									Металообробка
+								</a>
 							</li>
 							<li class="nav__item">
 								<a href="about-us.html" class="link-hover">Про нас</a>
