--- a/about-us.html
+++ b/about-us.html
@@ -72,7 +72,42 @@
 					d="m9.417 15.181-.397 5.584c.568 0 .814-.244 1.109-.537l2.663-2.545 5.518 4.041c1.012.564 1.725.267 1.998-.931l3.622-16.972.001-.001c.321-1.496-.541-2.081-1.527-1.714l-21.29 8.151c-1.453.564-1.431 1.374-.247 1.741l5.443 1.693 12.643-7.911c.595-.394 1.136-.176.691.218z" />
 			</g>
 		</symbol>
+
+		<symbol id="quality" viewBox="0 0 512 512">
+			<path
+				d="M226.932,399.948c-19.96,18.445-47.567,22.576-72.053,10.786c-8.852-4.263-16.322-10.149-22.17-17.199l-33.341,73.744  c-1.517,3.355,0.177,5.884,0.975,6.815c0.798,0.93,3.039,2.989,6.585,2.003l24.272-6.756c2.766-0.769,5.562-1.14,8.319-1.14   c11.631,0,22.578,6.583,27.849,17.492l10.962,22.685c1.601,3.315,4.604,3.646,5.854,3.621c1.226-0.016,4.242-0.414,5.758-3.769   l53.033-117.304C237.148,392.603,231.63,395.606,226.932,399.948z">
+			</path>
+			<path
+				d="M412.631,467.279l-33.341-73.744c-5.848,7.051-13.318,12.937-22.17,17.199c-24.487,11.79-52.093,7.659-72.053-10.786   c-4.698-4.342-10.216-7.345-16.045-9.022l53.033,117.304c1.517,3.356,4.533,3.753,5.758,3.769c1.25,0.025,4.253-0.306,5.854-3.621   l10.962-22.685c5.27-10.909,16.218-17.492,27.849-17.492c2.757,0,5.554,0.371,8.319,1.14l24.272,6.756   c3.546,0.987,5.788-1.072,6.585-2.003C412.454,473.162,414.148,470.633,412.631,467.279z">
+			</path>
+			<path
+				d="M438.821,207.791c-27.69-18.96-36.282-56.605-19.56-85.702c10.051-17.491,4.82-34.775-3.427-45.118   c-8.248-10.34-23.936-19.285-43.223-13.38c-32.084,9.827-66.877-6.925-79.201-38.141C286.002,6.686,269.227,0,256,0   c-13.227,0-30.002,6.686-37.41,25.451c-12.324,31.217-47.114,47.967-79.201,38.141c-19.289-5.904-34.974,3.039-43.223,13.38   c-8.247,10.343-13.478,27.625-3.427,45.118c16.722,29.096,8.13,66.742-19.56,85.702c-16.646,11.399-19.431,29.24-16.489,42.136   c2.942,12.896,13.194,27.761,33.137,30.808c33.174,5.068,57.248,35.256,54.809,68.727c-1.468,20.121,10.745,33.423,22.662,39.163   c11.918,5.739,29.932,6.995,44.748-6.698c12.322-11.387,28.141-17.083,43.953-17.083c15.818,0,31.628,5.693,43.952,17.083   c14.818,13.694,32.833,12.438,44.75,6.698c11.917-5.739,24.129-19.041,22.662-39.162c-2.439-33.471,21.635-63.659,54.809-68.728   c19.943-3.047,30.193-17.913,33.137-30.808C458.252,237.03,455.465,219.189,438.821,207.791z M256,335.923   c-72.575,0-131.619-59.044-131.619-131.619S183.424,72.684,256,72.684c72.576,0,131.619,59.044,131.619,131.619   C387.618,276.878,328.575,335.923,256,335.923z">
+			</path>
+			<path
+				d="M255.999,97.225c-59.044,0-107.079,48.036-107.079,107.079c0,59.043,48.034,107.079,107.079,107.079   s107.079-48.036,107.079-107.079S315.043,97.225,255.999,97.225z M310.874,193.922l-66.642,48.675   c-2.115,1.545-4.653,2.362-7.237,2.362c-0.666,0-1.335-0.054-2.001-0.164c-3.249-0.537-6.147-2.358-8.041-5.054l-19.934-28.382   c-3.895-5.547-2.556-13.2,2.989-17.095c5.546-3.895,13.198-2.557,17.094,2.989l12.75,18.154l56.548-41.302   c5.473-3.995,13.15-2.803,17.146,2.671C317.543,182.248,316.346,189.924,310.874,193.922z">
+			</path>
+		</symbol>
+
+		<symbol id="attention" viewBox="0 0 255 256">
+			<path
+				d="M44,91.9c0,18.4,14.9,33.4,33.4,33.4s33.4-14.9,33.4-33.4S95.7,58.6,77.3,58.6S44,73.5,44,91.9z M27.7,255.9v-75.2 c0-2.4,2-4,4-4c2.4,0,4,1.6,4,4v75.2H118v-75.2c0-2.4,2-4,4-4c2.4,0,4,2,4,4v75.2h25.6v-81.8c0.4-24-14.1-42.9-37.1-42.9H76.9H39.4 c-22.8,0-37.1,18.9-37.1,42.5v82.2L27.7,255.9L27.7,255.9z M231.6,44.2l-3.8,3.8c2.9,5.9,4.5,12.5,4.5,19.5 c-0.1,23.1-18.5,42.4-41.5,43.6c-25.9,1.3-47.3-20.1-46-46c1.2-23.1,20.5-41.4,43.6-41.5c7,0,13.6,1.6,19.5,4.5l3.8-3.8v-4.5v-1.4 c-7.9-3.7-16.8-5.6-26.2-5.1c-27.8,1.6-50.1,24.5-51,52.3c-1,31.3,24.7,57,55.9,55.9c27.8-0.9,50.7-23.2,52.3-51 c0.5-9.4-1.3-18.3-5.1-26.2h-1.4C236.2,44.2,231.6,44.2,231.6,44.2z M210.6,65.3l8.6-8.6c1.6,4.7,2.3,9.9,1.5,15.3 c-2.1,14.7-14.1,26.3-28.9,27.8c-20.5,2-37.7-15.2-35.6-35.7c1.5-14.8,13.1-26.8,27.8-28.9c5.4-0.7,10.6-0.1,15.3,1.5l-8.6,8.6 c-0.7-0.1-1.4-0.1-2.1-0.1c-13,0-23.5,11.3-22,24.7c1.1,10.2,9.3,18.3,19.5,19.5c13.3,1.5,24.7-9,24.7-22 C210.7,66.6,210.7,66,210.6,65.3z M227.7,34.8l-28.9,28.9c0.5,1.4,0.7,3,0.5,4.7c-0.5,5.1-4.7,9.2-9.8,9.7 c-6.7,0.6-12.3-5-11.8-11.8c0.4-5.1,4.6-9.3,9.7-9.8c1.7-0.2,3.2,0,4.7,0.5l28.9-28.9v-8.4l18.8-18.8V16H255l-18.8,18.8L227.7,34.8z">
+			</path>
+		</symbol>
+
+		<symbol id="idea" viewBox="0 0 256 190">
+			<path d="M48.12,27.903C48.12,13.564,59.592,2,74.023,2c14.339,0,25.903,11.564,25.903,25.903
+				C99.834,42.335,88.27,53.806,74.023,53.806C59.684,53.806,48.12,42.242,48.12,27.903z M191,139h-47V97c0-20.461-17.881-37-38-37H43
+				C20.912,60,1.99,79.14,2,98v77c-0.026,8.533,6.001,12.989,12,13c6.014,0.011,12-4.445,12-13v-75h8v88h78v-88h8l0.081,50.37
+				c-0.053,8.729,5.342,12.446,10.919,12.63h60C207.363,163,207.363,139,191,139z M184.29,116.353h30.625v-6.093H184.29V116.353z
+				M210.321,122.51v-1.531h-21.438v1.531c0,3.383,2.742,6.125,6.125,6.125h9.188C207.579,128.635,210.321,125.893,210.321,122.51z
+				M231.758,62.791c0,8.527-3.319,16.279-8.736,22.034c-5.143,5.464-8.108,12.619-8.108,20.123v0.686h-13.016V78.869h6.125v-4.594
+				H191.18v4.594h6.125v26.765H184.29v-0.685c0-7.517-2.988-14.672-8.133-20.151c-5.289-5.632-8.571-13.17-8.706-21.473
+				c-0.286-17.563,13.815-32.268,31.376-32.681C216.941,30.217,231.758,44.774,231.758,62.791z M204,2h-6v19.938h6V2z M245.971,22.975
+				l-4.243-4.243l-14.098,14.098l4.243,4.243L245.971,22.975z M168.312,37.073l4.243-4.243l-14.098-14.098l-4.243,4.243L168.312,37.073
+				z" />
+		</symbol>
 	</svg>
+
 	<header class="header">
 		<div class="header__background a-header__background"></div>
 		<div class="nav__social--desktop-wrap">
@@ -181,11 +216,11 @@
 				<div class="header__content header__inner">
 					<h1 class="header__content-title">Коротко про Armax MG</h1>
 					<p class="header__content-text">
-						ArmaxMG засновано в 2019 році! ArmaxMG – це сучасний та
-						технологічно-оснащений український металообробний завод, який
-						виробляє різну продукцію з металу. Вся продукція на нашому заводі
-						в Ківерцях проходить повний цикл виробництва від креслення до
-						упаковки!
+						ArmaxMG засновано в 2019 році! ArmaxMG – це сучасне та
+						технологічно-оснащене українське металургійне підриємство, яке
+						виробляє різну продукцію з металу. Вся продукція на нашому
+						підприємстві в Ківерцях проходить повний цикл виробництва від
+						креслення до упаковки!
 					</p>
 				</div>
 				<div class="header__form-container header__inner">
@@ -205,13 +240,73 @@
 
 	<main class="main">
 		<div class="container">
-			<section class="a-gallery">
+			<section class="a-privilege">
+				<h2 class="section__title">Чому нас обирають?</h2>
+				<div class="a-privilege__inner">
+					<div class="a-privilege__box">
+						<div class="a-privilege__card">
+							<svg class="a-privilege--svg" width="30" height="20">
+								<use xlink:href="#quality"></use>
+							</svg>
+							<div class="a-privilege__content">
+								<p class="a-privilege__title">Висока якість</p>
+								<p class="a-privilege__text">
+									Ми постійно покращуємо нашу якість і крок за кроком йдемо до
+									нових її стандартів
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="a-privilege__box">
+						<div class="a-privilege__card">
+							<svg class="a-privilege--svg" width="30" height="20">
+								<use xlink:href="#clock"></use>
+							</svg>
+							<div class="a-privilege__content">
+								<p class="a-privilege__title">Дотримуємося термінів</p>
+								<p class="a-privilege__text">
+									Ми постійно покращуємо нашу якість і крок за кроком йдемо до
+									нових її стандартів
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="a-privilege__box">
+						<div class="a-privilege__card">
+							<svg class="a-privilege--svg" width="30" height="20">
+								<use xlink:href="#attention"></use>
+							</svg>
+							<div class="a-privilege__content">
+								<p class="a-privilege__title">Уважні до клієнта</p>
+								<p class="a-privilege__text">
+									Ми постійно покращуємо нашу якість і крок за кроком йдемо до
+									нових її стандартів
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="a-privilege__box">
+						<div class="a-privilege__card">
+							<svg class="a-privilege--svg" width="30" height="20">
+								<use xlink:href="#idea"></use>
+							</svg>
+							<div class="a-privilege__content">
+								<p class="a-privilege__title">Знаходимо рішення</p>
+								<p class="a-privilege__text">
+									Ми знаходимо рішення як це реалізувати навіть у
+									найскладніших проектах, які ніколи не робили
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="a-gallery" data-aos="fade-down">
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/gallery-1.jpg" class="a-gallery__link">
 						<img src="img/gallery-1.jpg" alt="бом бом" />
 					</a>
 				</div>
-
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/gallery-2.jpg" class="a-gallery__link">
 						<img src="img/gallery-2.jpg" alt="" />
@@ -268,42 +363,8 @@
 					</a>
 				</div>
 			</section>
-
-			<section class="a-privilege">
-				<div class="a-privilege__card">
-					<h4 class="section__title">Висока якість</h4>
-					<p class="section__text">
-						Ми постійно покращуємо нашу якість і крок за кроком йдемо до нових
-						її стандартів
-					</p>
-				</div>
-				<div class="a-privilege__card">
-					<h4 class="section__title">Дотримуємося термінів</h4>
-					<p class="section__text">
-						Ми постійно покращуємо нашу якість і крок за кроком йдемо до нових
-						її стандартів
-					</p>
-				</div>
-				<div class="a-privilege__card">
-					<h4 class="section__title">Уважні до клієнта</h4>
-					<p class="section__text">
-						Ми постійно покращуємо нашу якість і крок за кроком йдемо до нових
-						її стандартів
-					</p>
-				</div>
-				<div class="a-privilege__card">
-					<h4 class="section__title">Повний комплекс робіт</h4>
-					<p class="section__text">
-						Ми постійно покращуємо нашу якість і крок за кроком йдемо до нових
-						її стандартів
-					</p>
-				</div>
-
-
-			</section>
 		</div>
 	</main>
-
 	<footer class="footer">
 		<div class="footer__wrapper"></div>
 		<div class="footer__bootom">
@@ -408,8 +469,12 @@
 			</div>
 		</div>
 	</footer>
-	<script src="js/fslightbox.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="js/index.js"></script>
+	<script src="js/swiper.js"></script>
+	<script src="js/fslightbox.js"></script>
+
 </body>
 
 </html>
