--- a/index.html
+++ b/index.html
@@ -540,7 +540,9 @@
       <div class="partners__background"></div>
     </section>
     <section class="calculation">
+      <div class="calculation__background"></div>
       <div class="calculation__inner">
+
         <div class="calculation__wrapper container">
           <div class="calculation__content">
             <h3 class="section__title calculation__title">
