--- a/services.html
+++ b/services.html
@@ -359,7 +359,9 @@
 		</section>
 
 		<section class="calculation">
+			<div class="calculation__background"></div>
 			<div class="calculation__inner">
+
 				<div class="calculation__wrapper container">
 					<div class="calculation__content">
 						<h3 class="section__title calculation__title">
