--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
             <ul class="nav__list nav__list-social">
               <li class="nav__item-social">
-                <a class="link-social" href="tel:+380687945051">
+                <a class="link-social link--hover" href="tel:+380687945051">
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#phone"></use>
                   </svg>
@@ -149,7 +149,7 @@
                 </a>
               </li>
               <li class="nav__item-social">
-                <a href="mailto:lazerarmax@gmail.com" class="link-social">
+                <a href="mailto:lazerarmax@gmail.com" class="link-social link--hover">
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#mail"></use>
                   </svg>
@@ -157,7 +157,7 @@
                 </a>
               </li>
               <li class="nav__item-social">
-                <a href="https://www.facebook.com/armaxMG" class="link-social">
+                <a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#facebook"></use>
                   </svg>
@@ -166,7 +166,7 @@
               </li>
               <li class="nav__item-social">
                 <a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
-                  class="link-social">
+                  class="link-social link--hover">
                   <svg class="link-social--svg" width="30" height="30">
                     <use xlink:href="#location"></use>
                   </svg>
@@ -589,7 +589,7 @@
               <label class="calculation__label" for="file">Завантажити файл:</label>
               <input class="calculation__input-file" type="file" id="file" />
 
-              <button class="header__content-button button__disabled" type="submit" disabled>
+              <button class="header__content-button button" type="submit">
                 Надіслати
               </button>
             </form>
